명령형 사고 버리기 , 안전한 함수 합성

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^5.10.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "fxjs": "^0.21.3"
+  }
 }
